@@ -1,3 +1,8 @@
+2004-02-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf32-ppc.c (allocate_dynrelocs): Create dynsym for undef weak
+	symbols used in PIE relocs.
+
 2004-02-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* elf32-sparc.c (elf32_sparc_finish_dynamic_sections): Clear
